examples/error-codes/violates-constraint/nonfatal/CV-CEA9-bad-static.output
CV-CEA9-bad-static.c:8:3: error: Computing pointer difference between pointers not to qualified or unqualified versions of compatible complete object types.
  Constraint violation (CV-CEA9). See C11 sec. 6.5.6:3
